# Video_Player_CPP

./: CMakeLists.txt  main.cpp  test.txt  tutorials.csv  tutorials.html  tutorials.txt  watchlist.html
Domain/: DynamicArray.h  Tutorial.cpp  Tutorial.h
Domain/Commands/: Command.h
Domain/Commands/Admin/: AddCommandAdmin.cpp  AddCommandAdmin.h  DeleteCommandAdmin.cpp  DeleteCommandAdmin.h  UpdatePresenterCommandAdmin.cpp  UpdatePresenterCommandAdmin.h  UpdateTitleCommandAdmin.cpp  UpdateTitleCommandAdmin.h
Domain/Commands/User/: AddCommandUser.cpp  AddCommandUser.h  DeleteCommandUser.cpp  DeleteCommandUser.h
Exceptions/: Exception.h  RepositoryException.h  ServiceException.h  ValidatorException.h
Repository/: CSVRepository.cpp  CSVRepository.h  FileRepository.cpp  FileRepository.h  HTMLRepository.cpp  HTMLRepository.h  Repository.cpp  Repository.h
Service/: IService.h  ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h  UndoService.cpp  UndoService.h
Tests/: testAll.cpp  testAll.h  testFile.cpp  testFile.h  testRepo.cpp  testRepo.h  testServiceAdmin.cpp  testServiceAdmin.h  testServiceUser.cpp  testServiceUser.h  testTutorial.cpp  testTutorial.h
UI/: RoleSelector.cpp  RoleSelector.h  UI.cpp  UI.h
UI/Admin/: AddAdmin.cpp  AddAdmin.h  AdminPanel.cpp  AdminPanel.h  DeleteAdmin.cpp  DeleteAdmin.h  UpdateAdmin.cpp  UpdateAdmin.h
UI/FileOptions/: FileOptions.cpp  FileOptions.h
UI/User/: DeleteUser.cpp  DeleteUser.h  DisplayUser.cpp  DisplayUser.h  FilterUser.cpp  FilterUser.h  TutorialModel.cpp  TutorialModel.h  UserPanel.cpp  UserPanel.h
Validator/: Validator.cpp  Validator.h
